--- a/react_nodejs/client/public/index.html
+++ b/react_nodejs/client/public/index.html
@@ -27,6 +27,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Dosis:wght@500&family=Gruppo&family=Lato:wght@300&family=Montserrat+Alternates:wght@300&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
   <title>Family Tree</title>
 </head>
 
